--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
         <span class="animate scroll " style="--i:3;"></span>
       </div>
     </div>
-    <div class="education-column">
-      <h3 class="title">Experience <span class="animate scroll" style="--i:4;"></span></h3>
-      <div class="education-box">
+    <!-- <div class="education-column">
+       <h3 class="title">Experience <span class="animate scroll" style="--i:4;"></span></h3> -->
+      <!-- <div class="education-box">
         <div class="education-content">
           <div class="content">
             <div class="year">
@@ -143,7 +143,7 @@
           </div>
         </div>
         <span class="animate scroll" style="--i:5;"></span>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
